--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 /* Gallery Divider Styles */
 .gallery-divider {
   width: 100%;
-  max-width: 1900px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 900px;
+  margin-left: 0;
+  margin-right: 0;
   gap: 0.5rem;
   opacity: 0.97;
 }
